style.css
/* -------  General Styles ------- */

body {
  font-family: "Lato", sans-serif;
}

h2 {
  font-size: 28px;
  font-weight: 400;
  margin: 0 10px 10px 10px;
  text-align: center;
}

h3 {
  font-size: 24px;
  font-weight: 500;
}

p {
  line-height: 1.5em;
  font-size: 20px;
  margin: 0;
}

section {
  padding: 20px;
}

section.alternate-background {
  background-color: #00a699;
  color: #fff;
}

main img {
  width: 100%;
  margin: 0px;
}

/* ---  Groups & Items --- */

.groupCol {
  display: flex;
  flex-direction: column;
}

.groupRow {
  display: flex;
  flex-direction: row;
}

.item {
  flex: 1;
  margin: 10px;
}

.item-double {
  flex: 2;
}

/* -------  Navigation ------- */

header {
  display: flex;
  flex-direction: column;
  background-color: #ff385c;
  padding: 20px 20px 0 20px;
  text-align: center;
  align-items: center;
}

.logo {
  font-family: "Pangolin", cursive;
  font-size: 72px;
  color: #fff;
}

header nav ul li {
  list-style-type: none;
}

header nav ul li a {
  color: #fff;
  font-size: 20px;
  text-decoration: none;
  padding: 0 20px 0 0;
}

header nav ul li a:hover {
  color: #bdbdbd;
  text-decoration: none;
}

/* -------  Search Form ------- */
#stay {
  display: flex;
  flex-direction: column;
}

form {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  border: 2px solid #ff385c;
  padding: 10px;
}

form div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

}

form label {
  font-weight: bold;
}

form select,
form input {
  margin-bottom: 20px;
  width: 180px;
}

form button {
  background-color: #ff385c;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 15px;
  width: 100%;
}

/* ------------ about ---------- */
#about {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;
}

#about-div {
  display: flex;
  flex-direction: column;
  align-items: center;
}

section div img {
  margin: 15px;
}



/* ----------- ideas ----------- */

#ideas {
  display: flex;
  flex-direction: column;
  margin: 5px 15px;
}

#ideas div img {
  margin: 0px;
}

/* -------  Footer ------- */

footer {
  background-color: #ff385c;
}

footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}

/* -------  Media Query ------- */
@media all and (min-width:480px) {

  /* ------header----- */
  header {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 10px 15px;
  }

  /* ---------form--------- */

  form {
    flex-direction: row;
    justify-content: space-between;
  }

  form div {
    flex-direction: column;
  }

  /* --------about--------- */

  #about {
    display: flex;
    flex-direction: column;
    align-items: center;
  }


  #about-div {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
  }

  #about-div .item {
    width: 20%;
    margin: 10px;
  }

  /* --------ideas-------- */
  #ideas div {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  #ideas div div {
    display: flex;
    flex-direction: column;
    margin: 0px 10px;
  }

  #ideas div div .item {
    max-width: 1200px;
  }

  /* --------host----------- */
  #host {
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
  }

  #host div {
    max-width: 50%;
    margin: 10px;
  }

  #host img {
    max-width: 50%;
    margin: 10px;
  }
}

